--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,11 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+video::-webkit-media-controls-enclosure {
+  display:none !important;
+}
+
+.panel {
+    z-index: 2147483647 !important;
+}
