--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+/* @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *)); */
+
 @custom-variant dark (&:where(.dark, .dark *));
 
 video::-webkit-media-controls-enclosure {
